<resources>
    <string name="app_name">MyNanasApp</string>
    <string name="application_name">MyNanas</string>
    <string name="startup_option_text">Please choose your option:</string>
    <string name="startup_btn_text_one">Log in as Entrepreneur</string>
    <string name="startup_btn_text_two">Log in as Staff</string>
    <string name="footer_text_with_app_version">© 2025 Lembaga Perindustrian Nenas Malaysia\nVersion 1.0.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_test">\@zikrimzk</string>
    <string name="post_type_2">Announcement</string>
    <string name="post_type_1">Community</string>
    <string name="post_type_tv">Post to:</string>
    <string name="share_btn_txt">Share</string>
    <string name="feed_post_fragment_txt">New Post</string>
    <string name="feed_caption_placeholder">Share your pineapple post now!</string>
    <string name="loc_preview_txt">Kuala Lumpur, MY</string>
    <string name="pp_image_desc">profile_picture</string>
    <string name="closeBtn_image_descr">close button for feed post fragment</string>
    <string name="user_role_in_profile">Entrepreneur</string>
    <string name="user_full_name_profile">User Fullname</string>
    <string name="fragment_feed_title">Community</string>
    <string name="view_entrepreneur_profile_btn">View Entrepreneur Profile</string>
    <string name="sp_text_pi">Product Information</string>
</resources>